# MISAKA-CORE

./: .gitignore  A-RANK-V7-FIX.md  CONTRIBUTING.md  Cargo.toml  GHOSTDAG-V6-SPEC-FIX.md  LICENSE  LOGRING-DEFAULT-MIGRATION.md  MISAKA-ALL-FIXES-CHANGELOG.md  NOTICE  README.md  chain-spec.md  misaka-explorer-v1.tar  misaka-explorer.tar  misaka-net-core-v041-final.tar  misaka-net-core-v041.tar
MISAKA-CORE/: Cargo.toml  MISAKA-ALL-FIXES-FINAL.patch  README.md  SECURITY.md
MISAKA-CORE/configs/: mainnet.toml  testnet.toml
MISAKA-CORE/crates/misaka-api/: Cargo.toml
MISAKA-CORE/crates/misaka-bridge/: Cargo.toml
MISAKA-CORE/crates/misaka-cli/: Cargo.toml
MISAKA-CORE/crates/misaka-consensus/: Cargo.toml
MISAKA-CORE/crates/misaka-crypto/: Cargo.toml
MISAKA-CORE/crates/misaka-governance/: Cargo.toml
MISAKA-CORE/crates/misaka-mempool/: Cargo.toml
MISAKA-CORE/crates/misaka-node/: Cargo.toml
MISAKA-CORE/crates/misaka-p2p/: Cargo.toml
MISAKA-CORE/crates/misaka-shielded/: Cargo.toml
MISAKA-CORE/crates/misaka-txscript/: Cargo.toml
MISAKA-CORE/docker/: node-compose.yml  node.Dockerfile
MISAKA-CORE/docs/: ARCHITECTURE-REBUILD-REPORT.md  ARCHITECTURE_KASPA_PARITY.md  BFT_NODE_INTEGRATION_REPORT.md  BRIDGE-TRUST-MODEL.md  BRIDGE_OPERATIONS_RUNBOOK.md  COMPLETE-SESSION-REPORT.md  FINAL-HARDENING-REPORT.md  MAINNET-HARDENING-CHANGELOG.md  MAINNET-P0-GAP.md  MAINNET_LAUNCH_GATE.md  MAINNET_SECURITY_CHECKLIST.md  MISAKA-CHAIN-SPEC.md  P2P_SECURITY_HARDENING_REPORT.md  POS_HARDENING_STATUS.md  PQ-MIGRATION-REPORT.md  README.md  RELEASE_SIGNING_AND_VERIFICATION.md  SEC-AUDIT-FIX-SUMMARY.md  SECURITY-AUDIT-V2.md  SECURITY-HARDENING-REPORT.md  SECURITY_HARDENING_REPORT_v8.md  SECURITY_HARDENING_v7_REPORT.md  SHIELDED_PRIVACY_MODEL.md  SR_COMMITTEE_DESIGN.md  TESTNET-HARDENING-REPORT.md  ZERO_PANIC_AUDIT_v9.md
MISAKA-CORE/docs/api/: openapi.yaml
MISAKA-CORE/docs/current-share/: 02_completion_path.ja.md  09_v51_progress_and_next_execution.ja.md  17_latest_upstream_recheck_3209e888.ja.md  32_current_share_status_summary.ja.md  README.md
MISAKA-CORE/docs/review-20260323/: 00_parallel_ai_workstream_map.md  02_parallel_round_implementation_report.ja.md  02_parallel_round_implementation_report.md  03_recovery_restart_proof.md  04_parallel_round_two_status.md  06_recovery_multinode_proof.md  08_validator_lifecycle_checkpoint_epoch.md  10_parallel_round_four_recovery_report.md  12_parallel_round_four_runtime_report.md  13_parallel_round_four_status.md  14_parallel_round_four_implementation_report.md  15_parallel_round_four_release_gate_green.ja.md  18_parallel_execution_rebaseline.ja.md  19_operator_onboarding_hardening.md  20_parallel_round_five_durable_restart_harness.ja.md  27_parallel_round_eleven_extended_soak_profile_green.ja.md  30_parallel_round_thirteen_extended_release_gate_hardening.ja.md  31_three_validator_operator_safe_initial_convergence.md  README.md  node-bootstrap.md
MISAKA-CORE/fuzz/fuzz_targets/: fuzz_logring_deser.rs
MISAKA-CORE/relayer/: Cargo.toml
MISAKA-CORE/relayer/src/: config.rs  main.rs  message.rs  misaka_watcher.rs  solana_watcher.rs  store.rs
MISAKA-CORE/scripts/: check_my_stake.py  dag_natural_restart_harness.sh  dag_release_gate.sh  dag_release_gate_extended.sh  dag_soak_harness.sh  dag_three_validator_recovery_harness.sh  make-release-zip.sh  pre-commit-check.sh  prod_feature_gate.sh  recovery_multinode_proof.sh  recovery_restart_proof.sh  relayer-bootstrap.sh  shielded_backend_benchmark.sh  shielded_bounded_e2e.sh  shielded_live_bounded_e2e_groth16.sh  shielded_live_bounded_e2e_plonk.sh  shielded_live_full_path_e2e.sh  shielded_live_full_path_e2e_groth16.sh  shielded_live_full_path_e2e_plonk.sh  shielded_module_status_snapshot.sh  shielded_runtime_comparison.sh  shielded_vk_artifact_inspect.sh  shielded_vk_runbook_manifest.sh
MISAKA-CORE/scripts/explorer/: index.html
MISAKA-CORE/solana-bridge/: Anchor.toml  package-lock.json
MISAKA-CORE/solana-bridge/tests/: misaka-bridge.ts
MISAKA-CORE/validator-tools/: generate-l1-key.js  start-validator.js
MISAKA-CORE/wallet/core/: Cargo.toml
components/addressmanager/: Cargo.toml
components/connectionmanager/: Cargo.toml
components/connectionmanager/src/: lib.rs
components/consensusmanager/: Cargo.toml
crates/misaka-authority-aggregation/: Cargo.toml
crates/misaka-authority-aggregation/src/: aggregator.rs  client.rs  committee.rs  error.rs  lib.rs  policy.rs  reducer.rs  tests.rs
crates/misaka-bridge/: Cargo.toml
crates/misaka-bridge/src/: persistence.rs  (+1 more)
crates/misaka-cli/: Cargo.toml
crates/misaka-database/: Cargo.toml
crates/misaka-eutxo-audit/: Cargo.toml
crates/misaka-execution/: Cargo.toml
crates/misaka-genesis-builder/: Cargo.toml
crates/misaka-light-client/: Cargo.toml
crates/misaka-loadgen/: Cargo.toml
crates/misaka-mining/: Cargo.toml
crates/misaka-muhash/: Cargo.toml
crates/misaka-node/: Cargo.toml
crates/misaka-notify/: Cargo.toml
crates/misaka-protocol-config/: Cargo.toml
crates/misaka-replay/: Cargo.toml
crates/misaka-rpc/: Cargo.toml
crates/misaka-sdk/: Cargo.toml
crates/misaka-security/: Cargo.toml
crates/misaka-smt/: Cargo.toml
crates/misaka-storage/: Cargo.toml
crates/misaka-test-vectors/: Cargo.toml
crates/misaka-txscript/: Cargo.toml
misaka-core-v3/: Cargo.toml  README.md  SECURITY.md
misaka-core-v3/misaka-bridge/: Cargo.toml
misaka-core-v3/misaka-cli/: Cargo.toml
misaka-core-v3/misaka-consensus/: Cargo.toml
misaka-core-v3/misaka-crypto/: Cargo.toml
misaka-core-v3/misaka-dag/: ARCHITECTURE.md  Cargo.toml
misaka-core-v3/misaka-governance/: Cargo.toml
misaka-core-v3/misaka-mempool/: Cargo.toml
misaka-core-v3/misaka-mev/: Cargo.toml
misaka-core-v3/misaka-node/: Cargo.toml
misaka-core-v3/misaka-p2p/: Cargo.toml
misaka-core-v3/misaka-pqc/: Cargo.toml
misaka-core-v3/misaka-rpc/: Cargo.toml
misaka-core-v3/misaka-storage/: Cargo.toml
misaka-core-v3/misaka-test-vectors/: Cargo.toml
misaka-core-v3/misaka-tokenomics/: Cargo.toml
misaka-core-v3/misaka-types/: Cargo.toml
misaka-net-core 3/: Cargo.toml
(+2475 files in other folders)
