[workspace]
resolver = "2"
members = [
    "crates/misaka-protocol-config",
    "crates/misaka-api",
    "crates/misaka-types",
    "crates/misaka-crypto",
    "crates/misaka-pqc",
    "crates/misaka-execution",
    "crates/misaka-database",
    "crates/misaka-storage",
    "crates/misaka-mempool",
    "crates/misaka-consensus",
    "crates/misaka-p2p",
    "crates/misaka-tokenomics",
    "crates/misaka-governance",
    # misaka-bridge: DELETED (Task 2). Orphan crate with no dependents.
    # See docs/archive/legacy-bridge/ for historical context.
    "crates/misaka-mev",
    "crates/misaka-rpc",
    "crates/misaka-node",
    "crates/misaka-cli",
    "crates/misaka-dag",
    "crates/misaka-test-cluster",
    "crates/misaka-simulator",
    "crates/misaka-notify",
    "crates/misaka-mining",
    "crates/misaka-indexes",
    "crates/misaka-muhash",
    "crates/misaka-math",
    "crates/misaka-utils",
    "crates/misaka-security",
    "crates/misaka-txscript",
    # ── v0.8.0 merged-snapshot crates: wiring status matrix (BLOCKER K) ──
    #
    # | crate                          | status  | production caller              | target |
    # |--------------------------------|---------|--------------------------------|--------|
    # | misaka-smt                     | WIRED   | misaka-storage/utxo_set.rs     | v0.8.0 |
    # | misaka-genesis-builder         | WIRING  | BLOCKER J (this milestone)     | v0.8.0 |
    # | misaka-authority-aggregation   | DEAD    | — (planned for v0.9.0)         | v0.9.0 |
    # | misaka-loadgen                 | DEAD    | — (bench / testnet only)       | dev-only |
    #
    # "DEAD" crates are compiled by `cargo build --workspace` but no
    # consumer links their symbols into the production node. This is
    # deliberate for the v0.8.0 mainnet surface — we want the code in
    # tree and type-checked so follow-up PRs can wire it, but the
    # symbols must not smuggle unverified behaviour into the node.
    #
    # When you add a new public API to a DEAD crate, add its first
    # production caller in the same PR. If you cannot add a caller,
    # hide the API behind a feature flag or keep it private — a
    # caller-less `pub fn` is a review-blocking regression under the
    # planned `cargo-udeps` / `cargo-machete` CI gate (BLOCKER L).
    "crates/misaka-smt",
    "crates/misaka-genesis-builder",
    "crates/misaka-authority-aggregation",
    "crates/misaka-loadgen",
    # ── v0.8.0 eUTXO dead crates (wiring status matrix, BLOCKER K) ──
    #
    # | crate                          | status  | production caller              | target |
    # |--------------------------------|---------|--------------------------------|--------|
    # | misaka-sdk                     | DEAD    | — (only misaka-eutxo-audit,    | v2.0   |
    # |                                |         |   itself dead)                 |        |
    # | misaka-light-client            | DEAD    | — (planned for v0.9.0)         | v0.9.0 |
    # | misaka-replay                  | DEAD    | — (debugging / post-mortem)    | dev-only |
    #
    # These depend on the eUTXO types + dag_types added by PR B. They
    # ship as dead code — buildable but not linked by misaka-node.
    #
    # misaka-eutxo-audit is STILL deferred because it pulls features that
    # need to be declared in misaka-mempool / misaka-txscript
    # (eutxo-v1-vm, transitive ModEu wiring) which is larger than the
    # PR-D2 scope. Re-enable in a dedicated follow-up after those
    # feature flags land.
    "crates/misaka-sdk",
    "crates/misaka-light-client",
    "crates/misaka-replay",
    # misaka-vm: DELETED (Phase 25). VM is not implemented.
    # See docs/design/VM_ROADMAP.md for v1.1 plan.
    "components/addressmanager",
    "components/connectionmanager",
    "components/consensusmanager",
    "rpc/core",
    "wallet/core",
]
exclude = [
    # BLOCKER B: `relayer` and `solana-bridge` are explicitly out of scope
    # for the v0.8.0 mainnet launch. Keeping them in `[workspace.exclude]`
    # means:
    #   - `cargo build --workspace [--all-features]` does NOT compile them
    #   - the CI gate does NOT gate on bridge code
    #   - external audits of the workspace do NOT include unimplemented bridge
    # Build them on demand with `cd relayer && cargo build`. The relayer
    # binary itself FATALs on mainnet until the mint endpoint
    # (`POST /api/bridge/submit_mint`) is implemented, and the node-side
    # stub in `crates/misaka-node/src/main.rs` always rejects mint requests
    # with `accepted: false`. See `relayer/README.md` for the full status.
    "relayer",
    "solana-bridge",
]

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
authors = ["MISAKA Network Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "=3.11.0"
hex = "0.4"
bincode = "1.3"
indexmap = "2"
smallvec = { version = "1", features = ["const_generics"] }
sha3 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
pqcrypto-mldsa = "0.1"
pqcrypto-mlkem = "0.1"
pqcrypto-traits = "0.3"
zeroize = { version = "1.8", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
parking_lot = "0.12"
rayon = "1.10"
num_cpus = "1.16"
clap = { version = "4", features = ["derive", "env"] }
toml_edit = "0.22"
axum = "0.7"
blake3 = "=1.5.5"
tower-http = { version = "0.5", features = ["cors"] }
tower = { version = "0.4", features = ["limit"] }
chrono = { version = "0.4.38", features = ["serde"] }
borsh = { version = "1.5", features = ["derive", "rc"] }
# Force Rust 1.75-compatible versions of transitive deps
time = "=0.3.36"

# ═══ Zero-Panic Policy: CI denies unwrap/expect in production code ═══
#
# We cannot set unwrap_used = "deny" workspace-wide without also breaking
# every test that calls .unwrap() on a Result for readability. Per-target
# lint overrides landed in rust 1.74 but require a nightly clippy feature
# flag to propagate through [workspace.lints.clippy]. Until that lands
# on stable, we ship unwrap_used = "warn" so CI still surfaces every new
# callsite as a warning (and Format/Check jobs still fail on warnings in
# non-test code paths via RUSTFLAGS). Grade-A promotion to "deny" + a
# #![cfg_attr(test, allow(clippy::unwrap_used))] per-crate sweep is
# tracked separately.
# Added for v0.8.0 merged crates adoption (PR A dead code).
once_cell = "1"
async-trait = "0.1"
chacha20 = "0.9"
num-bigint = "0.4"
# BLOCKER C: BIP-39 mnemonic (English wordlist, English-only features).
# The prior wallet/core mnemonic used synthetic "word0042" tokens and
# was explicitly flagged as a mainnet blocker; we ship `bip39 = "2"`
# pinned to the English language feature (no BIP-39 language bloat).
bip39 = { version = "2", default-features = false }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"  # Grade A target: promote to "deny" after systematic removal

[workspace.lints.rust]
missing_docs = "allow"  # Grade A target: promote to "warn" after doc completion

# ═══ Release profile: size-conscious, symbols stripped ═══
# `strip = "symbols"` removes debug symbols and the `.debug_*` sections so
# the shipped binary does not leak internal crate paths and function
# names to anyone running `strings` on it. `lto = "thin"` gives us most of
# the size/performance benefit of link-time optimisation with a small
# compile-time cost. `codegen-units = 1` squeezes a bit more size out of
# LLVM at the expense of parallel codegen, which is fine for release
# builds that run in CI.
[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
