[workspace]
resolver = "2"
members = [
    "crates/misaka-types",
    "crates/misaka-crypto",
    "crates/misaka-pqc",
    "crates/misaka-execution",
    "crates/misaka-storage",
    "crates/misaka-mempool",
    "crates/misaka-consensus",
    "crates/misaka-p2p",
    "crates/misaka-tokenomics",
    "crates/misaka-governance",
    "crates/misaka-bridge",
    "crates/misaka-mev",
    "crates/misaka-rpc",
    "crates/misaka-test-vectors",
    "crates/misaka-node",
    "crates/misaka-cli",
    "crates/misaka-dag",
]

[workspace.package]
version = "0.4.1"
edition = "2021"
license = "Apache-2.0"
authors = ["MISAKA Network Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
hex = "0.4"
sha3 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
toml_edit = "0.22"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4.38", features = ["serde"] }
# Force Rust 1.75-compatible versions of transitive deps
time = "=0.3.36"

# ═══ Zero-Panic Policy: CI must deny unwrap/expect in production ═══
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
