[workspace]
resolver = "2"
members = [
    "misaka-pqc",
    "misaka-dag",
    "misaka-consensus",
    "misaka-crypto",
    "misaka-types",
    "misaka-storage",
    "misaka-p2p",
    "misaka-rpc",
    "misaka-node",
    "misaka-bridge",
    "misaka-cli",
    "misaka-mempool",
    "misaka-tokenomics",
    "misaka-governance",
    "misaka-mev",
    "misaka-test-vectors",
]

[workspace.package]
version = "3.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/misaka-network/misaka-core"

[workspace.dependencies]
# Cryptography
sha3 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
thiserror = "1"

# Storage (optional)
# rocksdb = { version = "0.22", optional = true }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
