[package]
name = "misaka-relayer"
version = "0.1.0"
edition = "2021"
description = "MISAKA <-> Solana bridge relayer"

[[bin]]
name = "misaka-relayer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
sha3 = "0.10"
sha2 = "0.10"
base64 = "0.22"
bs58 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
