[package]
name = "misaka-consensusmanager"
description = "Consensus session management and lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
misaka-consensus = { path = "../../crates/misaka-consensus" }
misaka-database = { path = "../../crates/misaka-database" }
parking_lot = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
