[package]
name = "misaka-authority-aggregation"
description = "Generic stake-weighted quorum aggregation for MISAKA Network"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
misaka-types = { path = "../misaka-types" }
misaka-protocol-config = { path = "../misaka-protocol-config" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true
