[package]
name = "misaka-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
## ⚠ dev-bridge-mock: enables MockVerifier. NEVER enable for production/testnet.
dev-bridge-mock = []

[dependencies]
misaka-types = { path = "../misaka-types" }
misaka-crypto = { path = "../misaka-crypto" }
misaka-pqc = { path = "../misaka-pqc" }
sha3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
