[package]
name = "misaka-database"
description = "Database abstraction layer: typed cache, batch writer, store primitives"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
rocksdb = { version = "0.22", default-features = false, features = ["zstd"] }
bincode = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
