[package]
name = "misaka-execution"
description = "Block execution engine with full UTXO state transition"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
misaka-types = { path = "../misaka-types" }
misaka-crypto = { path = "../misaka-crypto" }
misaka-pqc = { path = "../misaka-pqc" }
misaka-storage = { path = "../misaka-storage" }
misaka-consensus = { path = "../misaka-consensus" }
sha3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }

[features]
default = []
# smart-contracts: DELETED (Phase 25). misaka-vm crate removed.
# VM support will be added as misaka-vm-wasm in v1.1.
# See docs/design/VM_ROADMAP.md
#
# vm-stub: gates dummy VM integration points used for internal testing of
# the block-apply pipeline. Currently unused in any production build; the
# cfg arms exist only so a future maintainer can flip it on when the VM
# work lands. Declared here so rustc check-cfg (-D warnings) does not
# flag it as an unknown cfg value.
vm-stub = []

[lints]
workspace = true
