[package]
name = "misaka-loadgen"
description = "TPS / latency load generator for MISAKA Network — ML-DSA-65 cost-inclusive benchmarking"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
misaka-types           = { path = "../misaka-types" }
misaka-crypto          = { path = "../misaka-crypto" }
misaka-protocol-config = { path = "../misaka-protocol-config" }
misaka-pqc             = { path = "../misaka-pqc" }
tokio    = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }
bincode  = { workspace = true }
hex      = { workspace = true }
sha3     = { workspace = true }
thiserror = { workspace = true }
tracing  = { workspace = true }
rand     = { workspace = true }
clap     = { workspace = true, optional = true }
async-trait = { workspace = true }
borsh    = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"

[lints.rust]
missing_docs = "allow"
