[package]
name = "misaka-mining"
description = "Mining manager: mempool, block template builder, fee-rate estimation, RBF"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
misaka-database = { path = "../misaka-database" }
misaka-consensus = { path = "../misaka-consensus" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }

[lints]
workspace = true
