[package]
name = "misaka-muhash"
description = "MuHash3072: cryptographically secure incremental multiset hash for UTXO commitments"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sha3 = { workspace = true }
serde = { workspace = true }
num-bigint = { workspace = true }
chacha20 = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
criterion = "0.5"

[[bench]]
name = "muhash_bench"
harness = false

[lints]
workspace = true
