[package]
name = "misaka-node"
description = "MISAKA Network validator node"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# ═══ DAG Consensus — Production Default ═══
# GhostDAG BlockDAG with multi-parent blocks, UTXO/DAG virtual state,
# PQ-encrypted P2P transport, economic finality checkpoints.
# This is the mainnet consensus layer.
default = ["dag"]
dag = ["misaka-dag"]
# Legacy feature alias retained for older builds that still reference it.
experimental_dag = ["dag"]
# ═══ Q-DAG-CT (v4) ═══
qdag_ct = ["dag", "misaka-dag/qdag-ct"]
# ═══ Dev-only features (NEVER enable in production) ═══
swagger-cdn = []
# ═══ RocksDB Persistent Storage (production) ═══
rocksdb = ["dag", "misaka-dag/rocksdb"]
# ═══ Development features (PHYSICALLY ISOLATED from production) ═══
# Development-only RPC endpoints (get_address_outputs — privacy leak).
dev-rpc = []
# Testnet faucet endpoint.
faucet = []
# Development bridge mock verifier.
dev-bridge-mock = []
# ═══ STARK STUB — DEV-ONLY, PHYSICALLY EXCLUDED FROM PROD ═══
# This feature gate ONLY controls dev/test builds.
# Production binary `misaka-node` MUST be compiled WITHOUT this feature.
# Release builds enforce via compile_error! below.
stark-stub = ["misaka-pqc/stark-stub", "misaka-mempool/stark-stub", "misaka-consensus/stark-stub", "misaka-execution/stark-stub"]
# General dev feature — compile_error! in release builds prevents shipping.
dev = ["dev-rpc", "faucet", "dev-bridge-mock"]
# SEC-FIX [Audit #2]: Legacy plaintext P2P — testnet only, compile_error! in release.
legacy-p2p = []
# SEC-FIX [Audit #5]: TOFU handshake — testnet only, compile_error! in release.
allow-tofu = []
# ═══ Testnet Release Build ═══
# Enables faucet + allow-tofu in release mode without triggering compile_error!.
# NEVER use for mainnet builds.
# Build: cargo build -p misaka-node --release --features testnet
testnet = ["faucet", "allow-tofu"]
# ═══ Shielded Groth16 verifier — optional, non-default ═══
shielded-groth16-verifier = [
    "dep:ark-bls12-381",
    "dep:ark-ff",
    "dep:ark-groth16",
    "dep:ark-relations",
    "dep:ark-serialize",
    "dep:ark-snark",
    "dep:ark-std",
]
# ═══ Shielded PLONK verifier — optional, non-default ═══
shielded-plonk-verifier = [
    "dep:dusk-bytes",
    "dep:dusk-plonk",
]

[dependencies]
misaka-types = { path = "../misaka-types" }
misaka-crypto = { path = "../misaka-crypto" }
misaka-pqc = { path = "../misaka-pqc" }
misaka-execution = { path = "../misaka-execution" }
misaka-storage = { path = "../misaka-storage" }
misaka-mempool = { path = "../misaka-mempool" }
misaka-consensus = { path = "../misaka-consensus" }
misaka-p2p = { path = "../misaka-p2p" }
misaka-tokenomics = { path = "../misaka-tokenomics" }
misaka-rpc = { path = "../misaka-rpc" }
misaka-security = { path = "../misaka-security" }
misaka-bridge = { path = "../misaka-bridge" }
misaka-shielded = { path = "../misaka-shielded" }
parking_lot = { workspace = true }
# DAG crate — compiled by default (production consensus layer)
misaka-dag = { path = "../misaka-dag", optional = true }
misaka-dag-types = { path = "../misaka-dag-types" }
misaka-primary-dag = { path = "../misaka-primary-dag" }
misaka-ordering = { path = "../misaka-ordering" }
misaka-finality = { path = "../misaka-finality" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true, features = ["util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
sha2 = "0.10"
blake3 = { workspace = true }
bs58 = "0.5"
ark-bls12-381 = { version = "0.4", optional = true }
ark-ff = { version = "0.4", optional = true }
ark-groth16 = { version = "0.4", optional = true }
ark-relations = { version = "0.4", optional = true }
ark-serialize = { version = "0.4", optional = true }
ark-snark = { version = "0.4", optional = true }
ark-std = { version = "0.4", optional = true }
dusk-bytes = { version = "0.1", optional = true }
dusk-plonk = { version = "0.22.0", default-features = false, features = ["std", "legacy-proving"], optional = true }

[lints]
workspace = true
