[package]
name = "misaka-notify"
description = "Event notification system: pub/sub, address tracking, broadcasting"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
misaka-database = { path = "../misaka-database" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
