[package]
name = "misaka-rpc"
description = "JSON-RPC 2.0 + WebSocket RPC server (Kaspa-aligned API)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
misaka-types = { path = "../misaka-types" }
misaka-crypto = { path = "../misaka-crypto" }
misaka-p2p = { path = "../misaka-p2p" }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
