[package]
name = "misaka-security"
description = "Security audit framework: invariant checks, fuzz targets, penetration test harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
