[package]
name = "misaka-smt"
description = "Sparse Merkle Tree (SHA3-256): v1.0 state commitment with inclusion/exclusion proofs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sha3 = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
criterion = "0.5"

[features]
default = []
# v1.0 で activate される feature。v0.8 では未使用。
v1-hardfork = []

[[bench]]
name = "smt_ops"
harness = false

[lints]
workspace = true
