[package]
name = "misaka-storage"
description = "Storage: JMT + UTXO set with rollback"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
## eUTXO v5 state commitment (datum/script_ref in element bytes).
## Feature-gated — activated at v2.0 hard fork, dead code on mainnet.
eutxo-v1-state = ["misaka-types/eutxo-v1-types"]

[dependencies]
misaka-types = { path = "../misaka-types" }
misaka-crypto = { path = "../misaka-crypto" }
# PR E (MuHash → SMT migration): keep misaka-muhash as a transitive dep
# for any remaining callers (bench, doc), but utxo_set.rs now uses SMT
# as the state-root commitment. Drop misaka-muhash dep when no callers
# remain.
misaka-muhash = { path = "../misaka-muhash" }
misaka-smt    = { path = "../misaka-smt" }
borsh = { workspace = true }
sha3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }
bincode = { workspace = true }
indexmap = { workspace = true }
smallvec = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = "3"
misaka-types = { path = "../misaka-types", features = ["eutxo-v1-types"] }

[lints]
workspace = true
