[package]
name = "misaka-storage"
description = "Storage: JMT + UTXO set with rollback"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
misaka-types = { path = "../misaka-types" }
misaka-crypto = { path = "../misaka-crypto" }
misaka-muhash = { path = "../misaka-muhash" }
# v1.0 hard fork: SMT (Sparse Merkle Tree) parallel-runs alongside
# MuHash during the migration window. Step 7 (2026-04-19)
# activates the `v1-hardfork` feature explicitly at this
# dependency edge so the intent is visible at every workspace
# consumer, not just via the crate-level `default`. See
# `docs/design/v100_smt_migration.md` §9.
misaka-smt = { path = "../misaka-smt", features = ["v1-hardfork"] }
borsh = { workspace = true }
sha3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }
bincode = { workspace = true }
indexmap = { workspace = true }
smallvec = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
