[package]
name = "misaka-test-vectors"
description = "Deterministic test vectors with PQC"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
misaka-types = { path = "../misaka-types" }
misaka-crypto = { path = "../misaka-crypto" }
misaka-pqc = { path = "../misaka-pqc" }
sha3 = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
