[package]
name = "misaka-txscript"
description = "Transaction script engine: stack machine, opcodes, PQ signature verification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
sha3 = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }
# CRIT-1 FIX: Real ML-DSA-65 verification (replaces stub)
misaka-pqc = { path = "../misaka-pqc" }

[lints]
workspace = true
